Bug 3565:Dashboard alert layout broken, Bug 3397:Reckon edge: Keyboard does appear when user click on search button

--- a/ReckonMobileDevV04/resources/sass/app.scss
+++ b/ReckonMobileDevV04/resources/sass/app.scss
@@ -878,7 +878,10 @@ $include-list-highlights: none;
     }
     .rm-fontsize100{
         font-size: 100%;
-    }    
+    }  
+    .rm-fontsize98{
+        font-size: 98%;
+    }  
     .rm-p5{
         padding: 5px;
     }
